2005-05-03  Karl Runge <runge@karlrunge.com>
	* libvncserver/main.c: fix leak in rfbDoCopyRect/rfbScheduleCopyRect
	* configure.ac: guard against empty HAVE_X

2005-05-02  Karl Runge <runge@karlrunge.com>
	* configure.ac: fatal error for x11vnc package if no X present
	* configure.ac: give warnings and info about missing libjpeg/libz
	* x11vnc: X RECORD heuristics to detect scrolls: -scrollcopyrect,
	  build customizations, bandwidth/latency estimates.

2005-04-27  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* clear requested region (long standing TODO, pointed out by Karl)

2005-04-19  Karl Runge <runge@karlrunge.com>
	* x11vnc: -wireframe, -wirecopyrect.  Back to the 90's with
	  wireframes to avoid window move/resize lurching.
	* safer remote control defaults. -privremote, -safer, -nocmds.
	* debug_xevents, debug_xdamage. -noviewonly for rawfb mode.

2005-04-10  Karl Runge <runge@karlrunge.com>
	* configure.ac: add mmap
	* x11vnc: -rawfb, -pipeinput, -xtrap, -flag, ...

2005-04-03  Karl Runge <runge@karlrunge.com>
	* configure.ac: add conditional libXTrap checking
	* x11vnc: use DEC-XTRAP on old X11R5 for grab control.
	  -shiftcmap n, -http, fix DAMAGE event leak.

2005-03-29  Karl Runge <runge@karlrunge.com>
	* x11vnc: fix event leaks, build-time customizations, -nolookup

2005-03-19  Karl Runge <runge@karlrunge.com>
	* x11vnc: scale cursors by default, -scale_cursor to tune,
	  -arrow n, -norepeat n, speed up integer magnification. 

2005-03-12  Karl Runge <runge@karlrunge.com>
	* x11vnc: X DAMAGE support, -clip WxH+X+Y, identd.

2005-03-05  Karl Runge <runge@karlrunge.com>
	* autoconf: rpm -> rpmbuild and echo -n -> printf

2005-03-04  Karl Runge <runge@karlrunge.com>
	* libvncserver/{cargs.c,sockets.c}: add -listen option and
	  rfbScreen member listenInterface.
	* rfb/rfb.h: rfbListenOnTCPPort() and rfbListenOnUDPPort()
	  function prototypes changed to include network interface.

2005-02-14  Karl Runge <runge@karlrunge.com>