@@ -58,13 +58,15 @@ int main(int argc,char** argv)
     exit(1);
   }
   
-  for(j=0;j<0;j++)
+  for(j=0;j<0 && rfbIsActive(s);j++)
     rfbProcessEvents(s,900000);
 
   i = rfbSelectBox(s,font,fontlist,10,20,200,300,0xffdfdf,0x602040,2,showFont);
   rfbLog("Selection: %d: %s\n",i,(i>=0)?fontlist[i]:"cancelled");
 
   rfbFreeFont(font);
+  free(s->frameBuffer);
+  rfbScreenCleanup(s);
 
   return(0);
 }
