@@ -1,3 +1,9 @@
+2005-05-07  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
+	* libvncserver/rfbserver.c: fix memory leak pointed out by Tim Jansen
+	* libvncserver/{httpd,main,rfbserver,sockets}.c, rfb/rfb.h:
+	  replace "rfbBool socketInitDone" by "enum rfbSocketState
+	  socketState"
+
 2005-05-03  Karl Runge <runge@karlrunge.com>
 	* libvncserver/main.c: fix leak in rfbDoCopyRect/rfbScheduleCopyRect
 	* configure.ac: guard against empty HAVE_X
